# pantryly

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  run.sh
ai-service/: requirements.txt
ai-service/app/: main.py  schemas.py
ai-service/app/aiagents/: __init__.py  test_agent.py
ai-service/app/services/: product_client.py
api-gateaway/: requirements.txt
api-gateaway/app/: __init__.py  config.py  main.py  schemas.py
api-gateaway/app/core/: __init__.py  config.py  security.py
api-gateway/: nginx.conf
auth-service/: requirements.txt
inventory-service/: Dockerfile  test.db
inventory-service/app/: database.py  logging.py  repository.py  schemas.py
microservices/ai-service/: Dockerfile  pyproject.toml
microservices/auth-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
microservices/auth-service/app/: main.py  pyproject.toml
microservices/auth-service/app/api/v1/: auth.py  user.py
microservices/auth-service/app/core/: authHandler.py  auth_handler.py  config.py  database.py  hashHelper.py  hash_helper.py
microservices/auth-service/app/models/: user.py
microservices/auth-service/app/repositories/: user_repository.py
microservices/auth-service/app/schemas/: user.py
microservices/auth-service/app/services/: user_service.py
microservices/auth-service/tests/: test_hasher.py
microservices/inventory-service/: .env.sample  Dockerfile  pyproject.toml
services/ai-service/: Dockerfile
services/auth-service/: requirements.txt
services/inventory-service/: pyproject.toml
(+76 files in other folders)
