[project]
name = "auth-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.135.3",
    "pwdlib[argon2]>=0.3.0",
    "pycryptodome>=3.23.0",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "pytest>=9.0.3",
]
